tests/invalids/invalidIf3-2.gt
proc main ()
    int m;
begin
    if int m then
        m := n;
    fi
end
